project/k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-service
  labels:
    app: listener-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener-service
  template:
    metadata:
      labels:
        app: listener-service
    spec:
      containers:
        - name: "listener-service"
          image: obededoreto/listener-service:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: listener-service
spec:
  selector:
    app: listener-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
    - protocol: TCP
      name: second-port
      port: 8084
      targetPort: 80
  type: ClusterIP
