project/k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit
  labels:
    app: rabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
        - name: "rabbit"
          image: rabbitmq:3.9-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5672
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbit
spec:
  selector:
    app: rabbit
  ports:
    - protocol: TCP
      name: main-port
      port: 5672
      targetPort: 5672
  type: ClusterIP
